feat(revisão): estrutura fila de revisões pendentes e fluxo de parecer técnico